[package]
name = "rosbag2-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
futures = "0.3.24"
indexmap = { version = "1.9.1", features = ["rayon"] }
itertools = "0.10.5"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
